# projectllm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
my-api/: README.md
my-api/src/my_api/: main.py
my-api/src/my_api/static/: index.html
src/my_api/: main.py
tests/: test_main.py
