[project]
name = "my-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "anthropic (>=0.97.0,<0.98.0)",
    "groq (>=1.2.0,<2.0.0)",
    "openai (>=2.32.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "my_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
